<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <data>
        <variable
            name="chara"
            type="com.amora.myseasonalanime.data.source.remote.response.detailcharacter.DetailCharaItem" />

        <variable
            name="viewModel"
            type="com.amora.myseasonalanime.views.features.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/imageView"
                imageUrl="@{chara.images.imageUrl}"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/character_picture"
                android:scaleType="centerCrop"
                tools:srcCompat="@color/purple_500" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/character_info"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_chara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="Chara Name"
            android:text="@{chara.name}"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/kanji_name_detail_chara"
            android:layout_width="wrap_content"
            android:text="@{chara.nameKanji"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:layout_height="wrap_content"
            tools:text="Kanji"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_chara" />

        <TextView
            android:id="@+id/about_detail_anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about_character"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/character_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{chara.about}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/about_detail_anime"
            tools:text="@string/lorem" />

        <TextView
            android:id="@+id/voice_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_actor"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/character_description" />

        <TextView
            android:id="@+id/chara_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="2dp"
            android:text="@{chara.favorites}"
            android:layout_margin="8dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/purple_200"
            app:drawableStartCompat="@drawable/ic_baseline_star_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kanji_name_detail_chara"
            tools:text="2000" />

        <androidx.recyclerview.widget.RecyclerView
            android:clipToPadding="false"
            android:id="@+id/recyclerView"
            listDetailChara="@{viewModel.charaAnime}"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/voice_actor"
            tools:listitem="@layout/va_list_item" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/close_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>