<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="anime"
            type="com.amora.myseasonalanime.data.source.remote.response.detail.DetailItem" />

        <variable
            name="clickListener"
            type="com.amora.myseasonalanime.views.features.home.HomeAdapter.AnimeListener" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="15dp"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/poster_anime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{anime.images.webp.largeImageUrl}"
                    tools:src="@color/purple_500" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@{anime.title}"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                tools:text="@string/anime_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/score"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/bg_item"
                    android:paddingHorizontal="6dp"
                    android:text="@{anime.score.toString()}"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="8.6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>