<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="anime"
            type="com.amora.myseasonalanime.data.source.remote.response.detail.DetailAnime" />

        <variable
            name="viewModel"
            type="com.amora.myseasonalanime.views.features.detail.DetailViewModel" />

    </data>

    <ScrollView
        android:id="@+id/detail_anime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBackground"
                showBlurImage="@{anime.images.webp.imageUrl}"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="240dp"
                android:layout_margin="0dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="240dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
                app:layout_constraintEnd_toEndOf="@+id/imageBackground"
                app:layout_constraintStart_toStartOf="@+id/imageBackground"
                app:layout_constraintTop_toTopOf="@+id/imageBackground">

                <ImageView
                    android:id="@+id/poster_anime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{anime.images.webp.largeImageUrl}"
                    tools:src="@color/purple_500" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/anime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{anime.title}"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageBackground"
                tools:text="Anime Title" />

            <TextView
                android:id="@+id/title_japanese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@{anime.titleJapanese}"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anime_title"
                tools:text="Japanese title" />

            <TextView
                android:id="@+id/date_airing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@{anime.aired.string}"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_japanese"
                tools:text="January, 21 2020 to ?" />

            <LinearLayout
                android:id="@+id/popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_airing">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="2dp"
                        android:text="@{anime.score.toString()}"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="@color/purple_200"
                        app:drawableStartCompat="@drawable/ic_baseline_star_24"
                        tools:text="8.93" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{anime.scoredBy.toString()}"
                        tools:text="10000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="2dp"
                        android:text="@{anime.popularity.toString()}"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="@color/purple_200"
                        app:drawableStartCompat="@drawable/ic_baseline_bar_chart_24"
                        tools:text="2000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Popularity" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="2dp"
                        android:text="@{anime.members.toString()}"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="@color/purple_200"
                        app:drawableStartCompat="@drawable/ic_baseline_groups_24"
                        tools:text="100000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Members" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/synopsys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/synopsis_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularity" />

            <TextView
                android:id="@+id/synopsys_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@{anime.synopsis}"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/synopsys"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/genres_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/genres"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsys_description" />

            <HorizontalScrollView
                android:id="@+id/list_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/characters_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/characters_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/characters_item_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characters_title"
                tools:listitem="@layout/anime_characters_item" />

            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/trailer"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characters_item_rv" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trailer_title">

                <ImageView
                    android:id="@+id/poster_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{anime.trailer.images.largeImageUrl}"
                    tools:src="@color/purple_500" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/play"
                    android:src="@drawable/ic_baseline_play_circle_outline_24" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>