<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="charaDetail"
            type="com.amora.myseasonalanime.data.source.remote.response.detailcharacter.DetailCharaItem" />

        <variable
            name="viewModel"
            type="com.amora.myseasonalanime.views.features.detail.characters.detail.DetailCharaViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/voice_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/voice_actor"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_description" />

            <TextView
                android:id="@+id/character_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@{charaDetail.about}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_detail_anime"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/about_detail_anime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/about_character"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chara_fav" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actor"
                android:layout_width="match_parent"
                android:layout_height="237dp"
                android:layout_marginVertical="8dp"
                app:listVoiceActor="@{viewModel.voiceActor}"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voice_actor"
                tools:listitem="@layout/va_list_item" />

            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="240dp"
                    android:contentDescription="@string/character_picture"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{charaDetail.images.webp.imageUrl}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:srcCompat="@color/purple_500" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/name_chara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{charaDetail.name}"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="Chara Name" />

            <TextView
                android:id="@+id/kanji_name_detail_chara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@{charaDetail.nameKanji}"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_chara"
                tools:text="Kanji" />

            <TextView
                android:id="@+id/chara_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawablePadding="2dp"
                android:text="@{charaDetail.favorites.toString()}"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="@color/purple_200"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kanji_name_detail_chara"
                tools:text="2000" />

            <!--<Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry_btn"
                app:layout_constraintBottom_toBottomOf="@+id/rv_actor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_actor" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>